# vst3sdk

./: .gitmodules
jsx-viewer/: README.md  main.js  package-lock.json  package.json  preload.js
jsx-viewer/samples/: hello.jsx
jsx-viewer/src/: index.html  renderer.js  styles.css
projects/adsp21xx_pad32/: CMakeLists.txt  README.md
projects/adsp21xx_pad32/include/: adsp21xx_drum_engine.h  adsp21xx_fixed_math.h
projects/adsp21xx_pad32/source/: adsp21xx_drum_engine.cpp  adsp21xx_pad32_demo.cpp  adsp21xx_pad32_vst3_stub.cpp
tools/VSTGUIAdvancedDesigner/: README.md  VSTGUIAdvancedDesigner.sln
tools/VSTGUIAdvancedDesigner/VSTGUIAdvancedDesigner/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  VSTGUIAdvancedDesigner.csproj
tools/VSTGUIAdvancedDesigner/VSTGUIAdvancedDesigner/Converters/: GridToViewportConverter.cs
tools/VSTGUIAdvancedDesigner/VSTGUIAdvancedDesigner/Models/: AnimationFrame.cs  AnimationSequence.cs  ControlKind.cs  ControlModel.cs  GridSettings.cs  LayerModel.cs  ProjectModel.cs
tools/VSTGUIAdvancedDesigner/VSTGUIAdvancedDesigner/Services/: BitmapAssetService.cs  DesignerServices.cs  FileDialogService.cs  PngExportService.cs  ProjectPersistence.cs  RectJsonConverter.cs  ServiceRegistry.cs  SpriteSheetExporter.cs  UidescSerializer.cs
tools/VSTGUIAdvancedDesigner/VSTGUIAdvancedDesigner/ViewModels/: ControlPaletteItem.cs  ControlPaletteViewModel.cs  DesignerCanvasViewModel.cs  LayerPanelViewModel.cs  MainViewModel.cs  PropertiesPanelViewModel.cs
tools/VSTGUIAdvancedDesigner/VSTGUIAdvancedDesigner/Views/Controls/: ControlPalette.xaml  (+8 more)
